# postpilot

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  finish_post.py  main.py  postpilot-chrome  pyproject.toml
app/: agent_api.py  ai.py  auth.py  content_processor.py  crypto.py  database.py  image_gen.py  scheduler.py  session_capture.py  video_ai.py  video_gen.py
docs/: AGENT.md  CONTENT_SERIES_PLAN.md  SAAS_PLAN.md
static/: guide.html  index.html
tests/: conftest.py  test_agent.py  test_ai.py  test_auth.py  test_content_processor.py  test_crypto_and_platforms.py  test_executor.py  test_image_gen.py  test_video_ai.py  test_video_gen.py
