[project]
name = "postpilot"
version = "0.1.0"
description = "Lightweight multi-platform social media post automator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "apscheduler<4",
    "python-dotenv",
    "pillow",
    "python-multipart",
    "httpx",
    "cryptography",
    "playwright",
    "playwright-stealth",
    "atproto",
    "Mastodon.py",
    "instagrapi",
    "twikit",
    "linkedin-api",
    "argon2-cffi",
    "pyjwt",
    "asyncpg",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
